--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -290,6 +290,7 @@ LeadScreen As screen:
 
                 btnnewmessageLdS As button:
                     AlignInContainer: =AlignInContainer.Center
+                    DisplayMode: =If((glryleadlistLS.Selected.LeadStatus="Quoted" || glryleadlistLS.Selected.LeadStatus="Rejected"),DisplayMode.Disabled,DisplayMode.Edit)
                     Fill: =RGBA(255, 0, 0, 1)
                     Height: =30
                     HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
