--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -241,7 +241,9 @@ DashboardScreen As screen:
                 toggleDS_1 As toggleSwitch:
                     BorderColor: =RGBA(0, 0, 0, 0)
                     Default: =true
-                    FalseFill: =RGBA(202, 202, 202, 1)
+                    DisabledColor: =Color.Black
+                    DisplayMode: =If(toggleDS_1.TrueText=toggleDS_1.FalseText,DisplayMode.Disabled,DisplayMode.Edit)
+                    FalseFill: =Color.Black
                     FalseText: =LookUp(LeadInformations,MechanicName=User().FullName,Year('Created On'))
                     Font: =Font.Arial
                     Height: =Parent.Height/2.02
@@ -328,7 +330,7 @@ DashboardScreen As screen:
                                 If(Parent.Width<358,12,Parent.Width<378,14,16)
                             Text: |-
                                 =//its for count of yealy/cumulatively open leads
-                                If(cumulatively=true,"Open Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted")),"Open Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted" && Year('Created On')=Year(Now())))) 
+                                "Open Leads#" & Char(10)&  If(cumulatively=true, CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted")), CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted" && Year('Created On')=Year(Now())))) 
                             Width: =Parent.Width
                             X: =btnopenLeadsDS.X
                             Y: =(Parent.Height-Self.Height)/2
@@ -377,31 +379,67 @@ DashboardScreen As screen:
                     grpInprogressLeadsDS As group:
                         Height: =5
                         Width: =5
-                        X: =28.74418604651163
+                        X: =40
                         Y: =40
-                        ZIndex: =3
+                        ZIndex: =5
 
                         lblInprogressLeadsDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =RGBA(116, 116, 116, 1)
                             DisplayMode: =DisplayMode.View
-                            FontWeight: =FontWeight.Semibold
+                            FontWeight: =FontWeight.Bold
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
                             Size: |-
                                 =//19.22
-                                If(Parent.Width<358,12,Parent.Width>358,14,16)
+                                If(Parent.Width<358,14,Parent.Width>358,16,18)
                             Text: |-
                                 =//its for count of yealy/cumulatively InProgress leads
-                                If(cumulatively=true,"InProgress Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress")),"InProgress Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress" && Year('Created On')=Year(Now())))) 
-                            Width: =btnInprogressLeadsDS.Width
-                            X: =btnInprogressLeadsDS.X
-                            Y: =(Parent.Height-Self.Height)/2
+                                
+                                //"InProgress Leads#" & Char(10)&  
+                                If(cumulatively=true, CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress")), CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress" && Year('Created On')=Year(Now())))) 
+                            Width: =Parent.Width
+                            X: =
+                            Y: =lblInprogressLeadsDS_1.Height+lblInprogressLeadsDS_1.Y
                             ZIndex: =1
 
+                        lblInprogressLeadsDS_1 As label:
+                            Align: =Align.Center
+                            AutoHeight: =true
+                            DisplayMode: =DisplayMode.View
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            LineHeight: =1.05
+                            OnSelect: =Set(VarPopup,true)
+                            Size: |-
+                                =//19.22
+                                If(Parent.Width<358,12,Parent.Width>358,16,18)
+                            Text: |-
+                                ="Leads#"
+                            Width: =Parent.Width
+                            X: =
+                            Y: =lblInprogressLeadsDS_2.Height+lblInprogressLeadsDS_2.Y
+                            ZIndex: =2
+
+                        lblInprogressLeadsDS_2 As label:
+                            Align: =Align.Center
+                            AutoHeight: =true
+                            DisplayMode: =DisplayMode.View
+                            FontWeight: =FontWeight.Bold
+                            Height: =30
+                            LineHeight: =1.05
+                            OnSelect: =Set(VarPopup,true)
+                            Size: |-
+                                =//19.22
+                                If(Parent.Width<358,12,Parent.Width>358,16,18)
+                            Text: ="InProgress"
+                            Width: =Parent.Width
+                            X: =
+                            Y: =20
+                            ZIndex: =3
+
                         btnInprogressLeadsDS As button:
-                            Color: =RGBA(0, 0, 0, 0)
+                            Color: =RGBA(0, 0, 0, 1)
                             DisabledBorderColor: =RGBA(116, 116, 116, 1)
                             Fill: =RGBA(0, 0, 0, 0)
                             Height: =Parent.Height
@@ -413,17 +451,20 @@ DashboardScreen As screen:
                                 Set(VarFutureIncetives,false);
                                 Set(VarTotalIncentives,false);
                             PaddingRight: =5.34
-                            PaddingTop: =53.40
+                            PaddingTop: =30
                             RadiusBottomLeft: =6
                             RadiusBottomRight: =6
                             RadiusTopLeft: =6
                             RadiusTopRight: =6
-                            Size: |
+                            Size: |-
                                 =//14.95
                                 //If(Parent.Width<358,9,Parent.Width>358 && Parent.Width<500,12,Parent.Width>500,14)
-                            Text: =""
+                                If(Parent.Width<358,14,Parent.Width>358,16,18)
+                            Text: =
+                            VerticalAlign: =VerticalAlign.Top
                             Width: =Parent.Width
-                            ZIndex: =3
+                            X: =
+                            ZIndex: =4
 
                 ctnRejectedLeadsDS As groupContainer.manualLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
@@ -439,58 +480,96 @@ DashboardScreen As screen:
                     Width: =Parent.Width/3.35
                     ZIndex: =3
 
-                    grpRejectedLeadsDS As group:
+                    grpInRejectedLeadsDS As group:
                         Height: =5
                         Width: =5
-                        X: =20
-                        Y: =40
-                        ZIndex: =3
+                        X: =40
+                        Y: =0.07304526748976059
+                        ZIndex: =8
 
-                        lblRejectedLeadsDS As label:
+                        lblLeadsCountDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =RGBA(116, 116, 116, 1)
                             DisplayMode: =DisplayMode.View
-                            FontWeight: =FontWeight.Semibold
+                            FontWeight: =FontWeight.Bold
                             LineHeight: =1.05
-                            OnSelect: =Navigate(SubmittedLeadScreen);Set(VarFutureIncetives,true)
+                            OnSelect: =Set(VarPopup,true)
                             Size: |-
                                 =//19.22
-                                If(Parent.Width<358,12,Parent.Width<378,14,16)
+                                If(Parent.Width<358,14,Parent.Width>358,16,18)
                             Text: |-
                                 =//its for count of yealy/cumulatively InProgress leads
-                                If(cumulatively=true,"Rejected Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected")),"Rejected Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected" && Year('Created On')=Year(Now())))) 
-                            Width: =btngrpRejectedLeadsDS.Width
-                            X: =btngrpRejectedLeadsDS.X
-                            Y: =(Parent.Height-Self.Height)/2
-                            ZIndex: =1
+                                
+                                //"InProgress Leads#" & Char(10)&  
+                                If(cumulatively=true, CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected")), CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected" && Year('Created On')=Year(Now())))) 
+                            Width: =Parent.Width
+                            X: =
+                            Y: =lblLeadsDS.Height+lblLeadsDS.Y
+                            ZIndex: =4
 
-                        btngrpRejectedLeadsDS As button:
-                            Color: =RGBA(0, 0, 0, 0)
+                        lblLeadsDS As label:
+                            Align: =Align.Center
+                            AutoHeight: =true
+                            DisplayMode: =DisplayMode.View
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            LineHeight: =1.05
+                            OnSelect: =Set(VarPopup,true)
+                            Size: |-
+                                =//19.22
+                                If(Parent.Width<358,12,Parent.Width>358,16,18)
+                            Text: |-
+                                ="Leads#"
+                            Width: =Parent.Width
+                            X: =
+                            Y: =lblRejectedDS.Height+lblRejectedDS.Y
+                            ZIndex: =5
+
+                        lblRejectedDS As label:
+                            Align: =Align.Center
+                            AutoHeight: =true
+                            DisplayMode: =DisplayMode.View
+                            FontWeight: =FontWeight.Bold
+                            Height: =30
+                            LineHeight: =1.05
+                            OnSelect: =Set(VarPopup,true)
+                            Size: |-
+                                =//19.22
+                                If(Parent.Width<358,12,Parent.Width>358,16,18)
+                            Text: ="Rejected"
+                            Width: =Parent.Width
+                            X: =
+                            Y: =20.07304526748976
+                            ZIndex: =6
+
+                        btnRejectedLeadsDS As button:
+                            Color: =RGBA(0, 0, 0, 1)
                             DisabledBorderColor: =RGBA(116, 116, 116, 1)
                             Fill: =RGBA(0, 0, 0, 0)
-                            Height: |-
-                                =//180
-                                Parent.Height
+                            Height: =Parent.Height
                             HoverFill: =RGBA(0, 0, 0, 0)
                             OnSelect: |-
-                                =Navigate([@SubmittedLeadScreen],ScreenTransition.None,{Header: "Rejected"});
-                                Set(VarFutureIncetives,true);
-                                Set(VarSoldIncetives,false);
+                                =//Set(VarPopup,true)
+                                Navigate([@SubmittedLeadScreen],ScreenTransition.None,{Header: "Rejected"});
+                                Set(VarSoldIncetives,true);
+                                Set(VarFutureIncetives,false);
                                 Set(VarTotalIncentives,false);
                             PaddingRight: =5.34
-                            PaddingTop: =50
+                            PaddingTop: =30
                             RadiusBottomLeft: =6
                             RadiusBottomRight: =6
                             RadiusTopLeft: =6
                             RadiusTopRight: =6
                             Size: |-
-                                =
+                                =//14.95
                                 //If(Parent.Width<358,9,Parent.Width>358 && Parent.Width<500,12,Parent.Width>500,14)
+                                If(Parent.Width<358,14,Parent.Width>358,16,18)
                             Text: =
                             VerticalAlign: =VerticalAlign.Top
                             Width: =Parent.Width
-                            ZIndex: =3
+                            X: =
+                            Y: =0.07304526748976059
+                            ZIndex: =7
 
             ctnLeadsButtonsDS As groupContainer.horizontalAutoLayoutContainer:
                 AlignInContainer: =AlignInContainer.Center
