--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -312,44 +312,79 @@ DashboardScreen As screen:
                     grpOpenLeadsDS As group:
                         Height: =5
                         Width: =5
-                        X: =20
-                        Y: =40
-                        ZIndex: =3
+                        X: =40
+                        Y: =0.07304526748976059
+                        ZIndex: =5
 
-                        lblOpenLeadsDS As label:
+                        lblInprogressLeadsDS_5 As label:
                             Align: =Align.Center
                             AutoHeight: =true
-                            Color: =RGBA(116, 116, 116, 1)
                             DisplayMode: =DisplayMode.View
-                            FontWeight: =FontWeight.Semibold
-                            Height: =50
+                            FontWeight: =FontWeight.Bold
                             LineHeight: =1.05
-                            OnSelect: =Navigate(SubmittedLeadScreen);Set(VarFutureIncetives,true)
+                            OnSelect: =Set(VarPopup,true)
                             Size: |-
                                 =//19.22
-                                If(Parent.Width<358,12,Parent.Width<378,14,16)
+                                If(Parent.Width<358,14,Parent.Width>358,16,18)
                             Text: |-
-                                =//its for count of yealy/cumulatively open leads
-                                "Open Leads#" & Char(10)&  If(cumulatively=true, CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted")), CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted" && Year('Created On')=Year(Now())))) 
+                                =//its for count of yealy/cumulatively InProgress leads
+                                
+                                //"InProgress Leads#" & Char(10)&  
+                                If(cumulatively=true, CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress")), CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress" && Year('Created On')=Year(Now())))) 
                             Width: =Parent.Width
-                            X: =btnopenLeadsDS.X
-                            Y: =(Parent.Height-Self.Height)/2
+                            X: =
+                            Y: =lblInprogressLeadsDS_4.Height+lblInprogressLeadsDS_4.Y
                             ZIndex: =1
 
-                        btnopenLeadsDS As button:
-                            Color: =RGBA(0, 0, 0, 0)
+                        lblInprogressLeadsDS_4 As label:
+                            Align: =Align.Center
+                            AutoHeight: =true
+                            DisplayMode: =DisplayMode.View
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            LineHeight: =1.05
+                            OnSelect: =Set(VarPopup,true)
+                            Size: |-
+                                =//19.22
+                                If(Parent.Width<358,12,Parent.Width>358,16,18)
+                            Text: |-
+                                ="Leads#"
+                            Width: =Parent.Width
+                            X: =
+                            Y: =lblOpen.Height+lblOpen.Y
+                            ZIndex: =2
+
+                        lblOpen As label:
+                            Align: =Align.Center
+                            AutoHeight: =true
+                            DisplayMode: =DisplayMode.View
+                            FontWeight: =FontWeight.Bold
+                            Height: =30
+                            LineHeight: =1.05
+                            OnSelect: =Set(VarPopup,true)
+                            Size: |-
+                                =//19.22
+                                If(Parent.Width<358,12,Parent.Width>358,16,18)
+                            Text: ="Open"
+                            Width: =Parent.Width
+                            X: =
+                            Y: =20.07304526748976
+                            ZIndex: =3
+
+                        btnOpenLeadsDS As button:
+                            Color: =RGBA(0, 0, 0, 1)
                             DisabledBorderColor: =RGBA(116, 116, 116, 1)
                             Fill: =RGBA(0, 0, 0, 0)
-                            Height: |-
-                                =//180
-                                Parent.Height
+                            Height: =Parent.Height
                             HoverFill: =RGBA(0, 0, 0, 0)
                             OnSelect: |-
-                                =Navigate([@SubmittedLeadScreen],ScreenTransition.None,{Header: "Open"});Set(VarFutureIncetives,false);
-                                Set(VarSoldIncetives,false);
-                                Set(VarTotalIncentives,true);
+                                =//Set(VarPopup,true)
+                                Navigate([@SubmittedLeadScreen],ScreenTransition.None,{Header: "Open"});
+                                Set(VarSoldIncetives,true);
+                                Set(VarFutureIncetives,false);
+                                Set(VarTotalIncentives,false);
                             PaddingRight: =5.34
-                            PaddingTop: =50
+                            PaddingTop: =30
                             RadiusBottomLeft: =6
                             RadiusBottomRight: =6
                             RadiusTopLeft: =6
@@ -357,10 +392,13 @@ DashboardScreen As screen:
                             Size: |-
                                 =//14.95
                                 //If(Parent.Width<358,9,Parent.Width>358 && Parent.Width<500,12,Parent.Width>500,14)
+                                If(Parent.Width<358,14,Parent.Width>358,16,18)
                             Text: =
                             VerticalAlign: =VerticalAlign.Top
                             Width: =Parent.Width
-                            ZIndex: =3
+                            X: =
+                            Y: =0.07304526748976059
+                            ZIndex: =4
 
                 ctnInprogressLeadsDS As groupContainer.manualLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
