--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1154,6 +1154,9 @@ LeadScreen As screen:
                                                 Estimate = txtinptestimatenumber.Text
                                             )
                                         ),
+                                        If(!IsBlank(LookUp(LeadInformations,ID=glryleadlistLS.Selected.ID && LeadStatus="Quoted")),
+                                        Set(VarPopUpEstimateNumber,true););
+                                
                                         UpdateIf(
                                             LeadInformations,
                                             ID = glryleadlistLS.Selected.ID,
@@ -1198,6 +1201,11 @@ LeadScreen As screen:
                                                     ) * 0.02
                                                 }
                                             );
+                                            ,
+                                            UpdateIf(TotalIncentives,LeadInformationLID.ID=glryleadlistLS.Selected.ID,
+                                            {
+                                                
+                                            });
                                         );
                                         Notify(
                                             "Proposed Incentives updated for the estimateId " & txtinptestimatenumber.Text,
@@ -1538,4 +1546,81 @@ LeadScreen As screen:
             Width: =100
             X: =Parent.Width-Self.Width
             ZIndex: =12
+
+    grpinprogressconfirmationLS_1 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =20
+
+        rectfullinprogressconfirmtionLS_1 As rectangle:
+            Fill: =RGBA(0, 0, 0, 0.29)
+            Height: =Parent.Height
+            Visible: =VarPopUpEstimateNumber
+            Width: =Parent.Width
+            ZIndex: =14
+
+        rectinprogressconfirmationLS_1 As rectangle:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =280
+            Visible: =VarPopUpEstimateNumber
+            Width: =400
+            X: =(Parent.Width-Self.Width)/2
+            Y: =Parent.Height/3
+            ZIndex: =15
+
+        imginfoLS_1 As image:
+            Height: =52
+            Image: =images
+            Visible: =VarPopUpEstimateNumber
+            Width: =52
+            X: =(Parent.Width-Self.Width)/2
+            Y: =rectinprogressconfirmationLS_1.Y+20
+            ZIndex: =16
+
+        lblmsgLS_1 As label:
+            Align: =Align.Center
+            Font: =Font.Arial
+            FontWeight: =FontWeight.Bold
+            Height: =100
+            Size: =15
+            Text: ="Do you want to change estimate number?"
+            Visible: =VarPopUpEstimateNumber
+            Width: =350
+            X: =(Parent.Width-Self.Width)/2
+            Y: =imginfoLS_1.Y+ imginfoLS_1.Height+2
+            ZIndex: =17
+
+        btnyesLS_1 As button:
+            Fill: =RGBA(54, 176, 75, 1)
+            Font: =Font.Arial
+            HoverFill: =RGBA(75, 125, 6, 1)
+            OnSelect: |-
+                =Set(VarPreviousIncentive,LookUp(LeadInformations,ID=glryleadlistLS.Selected.ID,LeadIncentive));
+                Set(VarPopUpEstimateNumber,false);
+            PressedBorderColor: =RGBA(1, 43, 1, 0)
+            PressedFill: =Self.Fill
+            Text: ="Yes"
+            Visible: =VarPopUpEstimateNumber
+            Width: =120
+            X: =(Parent.Width-Self.Width)/2.3
+            Y: =lblmsgLS_1.Y+ lblmsgLS_1.Height+10
+            ZIndex: =18
+
+        btnnoLS_1 As button:
+            BorderColor: =RGBA(75, 125, 6, 1)
+            Fill: =RGBA(54, 176, 75, 1)
+            Font: =Font.Arial
+            HoverBorderColor: =RGBA(75, 125, 6, 1)
+            HoverFill: =RGBA(75, 125, 6, 1)
+            OnSelect: =Set(VarPopUpEstimateNumber,false);
+            PressedBorderColor: =RGBA(1, 43, 1, 0)
+            PressedFill: =Self.Fill
+            Text: ="No"
+            Visible: =VarPopUpEstimateNumber
+            Width: =120
+            X: =btnyesLS_1.X+btnyesLS_1.Width+20
+            Y: =lblmsgLS_1.Y+ lblmsgLS_1.Height+10
+            ZIndex: =19
 
