--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1202,7 +1202,7 @@ LeadScreen As screen:
                                                 }
                                             );
                                             ,
-                                            UpdateIf(TotalIncentives,LeadInformationLID.ID=glryleadlistLS.Selected.ID,
+                                            UpdateIf(TotalIncentives,leadinformationli=glryleadlistLS.Selected.ID,
                                             {
                                                 TotalproposedIncentives: (LookUp(TotalIncentives,LeadInformationLID.ID=glryleadlistLS.Selected.ID,TotalproposedIncentives) - VarPreviousIncentive) + 
                                                     LookUp(
