--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -4,6 +4,7 @@ LeadScreen As screen:
         Set(VarLeadDetails,true);
         Set(VarLeadProposal,false);
         Set(VarLeadMessages,false);
+        Set(VarPopUpEstimateNumber,false);
         Refresh(LeadInformations);
         Refresh(LeadImages);
         Refresh(LeadChats);
